--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -278,6 +278,15 @@
             border-radius: 0.5rem;
         }
 
+        /* Footnote Styling */
+        .footnote-ref {
+            font-size: 0.7em;
+            vertical-align: super;
+            color: var(--teal-color);
+            font-weight: 600;
+            cursor: help;
+        }
+
         /* Summary Section with Vector Background */
         .summary-card {
             position: relative;
@@ -759,7 +768,7 @@
                                     <div class="diagram-box w-32 mt-2">지식 그래프</div>
                                 </div>
                                 <div class="diagram-arrow transform md:rotate-0 rotate-90 my-2 md:my-0">→</div>
-                                <div class="diagram-box">통합 학습 모델 (e.g., DKRL)</div>
+                                <div class="diagram-box">통합 학습 모델 (e.g., DKRL<sup class="footnote-ref">1</sup>)</div>
                                 <div class="diagram-arrow transform md:rotate-0 rotate-90 my-2 md:my-0">→</div>
                                 <div class="diagram-box diagram-box-accent">지식 강화 임베딩</div>
                             </div>
@@ -767,11 +776,28 @@
                                 <h4 class="font-bold themeable-heading mb-2">주요 특징</h4>
                                 <p class="themeable-subtitle">임베딩이 텍스트의 문맥적 의미와 지식 그래프의 구조적 관계를 모두 학습하여 더욱 풍부한 의미 표현을 갖게 됩니다. 학습 과정이 복잡하지만 가장 이상적인 형태의 융합을 추구합니다.</p>
                             </div>
+
+                            <!-- Key References -->
+                            <div class="mt-6 p-4 rounded" style="background-color: rgba(13, 148, 136, 0.05); border-left: 3px solid var(--teal-color);">
+                                <h4 class="font-bold themeable-heading mb-3 text-sm">📚 주요 참고문헌</h4>
+                                <ul class="space-y-2 text-xs themeable-subtitle">
+                                    <li><strong>KEPLER</strong>: Wang et al. (2021) - "KEPLER: A Unified Model for Knowledge Embedding and Pre-trained Language Representation"</li>
+                                    <li><strong>K-Adapter</strong>: Wang et al. (2020) - "K-Adapter: Infusing Knowledge into Pre-Trained Models with Adapters"</li>
+                                    <li><strong>ERNIE</strong>: Sun et al. (2019, 2021) - "ERNIE: Enhanced Language Representation with Informative Entities"</li>
+                                    <li><strong>CoLAKE</strong>: Sun et al. (2020) - "CoLAKE: Contextualized Language and Knowledge Embedding"</li>
+                                    <li><strong>JKRL</strong>: Zhang et al. (2020) - "Joint Knowledge Representation Learning"</li>
+                                </ul>
+                            </div>
+
+                            <!-- Footnotes -->
+                            <div class="mt-4 pt-4 border-t themeable-border">
+                                <p class="text-xs themeable-subtitle"><sup>1</sup> DKRL = Deep Knowledge Representation Learning (깊은 지식 표현 학습)</p>
+                            </div>
                         </div>
                     </div>
                     <div id="content-2" class="content-panel">
-                        <h3 class="text-2xl font-bold mb-4 text-center themeable-heading">지식 그래프 강화 임베딩 (KG-Enhanced Embedding)</h3>
-                        <p class="themeable-subtitle mb-6 text-center">사전에 학습된 언어 모델(e.g., BERT)의 임베딩에 지식 그래프 정보를 '주입'하여 성능을 향상시키는 방식입니다.</p>
+                        <h3 class="text-2xl font-bold mb-4 text-center themeable-heading">지식 그래프 강화 임베딩 (KG<sup class="footnote-ref">2</sup>-Enhanced Embedding)</h3>
+                        <p class="themeable-subtitle mb-6 text-center">사전에 학습된 언어 모델(e.g., BERT<sup class="footnote-ref">3</sup>)의 임베딩에 지식 그래프 정보를 '주입'하여 성능을 향상시키는 방식입니다.</p>
                         <div class="themeable-card p-6 rounded-lg shadow-md border">
                             <div class="flex flex-col md:flex-row items-center justify-center">
                                 <div class="diagram-box w-40">사전 학습 임베딩 (BERT)</div>
@@ -784,26 +810,109 @@
                                 <h4 class="font-bold themeable-heading mb-2">주요 특징</h4>
                                 <p class="themeable-subtitle">기존의 강력한 언어 모델을 활용하면서, 부족했던 사실 기반의 명시적 지식을 보강할 수 있습니다. 비교적 적은 비용으로 기존 모델의 성능을 끌어올릴 수 있어 실용적입니다.</p>
                             </div>
+
+                            <!-- Key References -->
+                            <div class="mt-6 p-4 rounded" style="background-color: rgba(13, 148, 136, 0.05); border-left: 3px solid var(--teal-color);">
+                                <h4 class="font-bold themeable-heading mb-3 text-sm">📚 주요 참고문헌</h4>
+                                <ul class="space-y-2 text-xs themeable-subtitle">
+                                    <li><strong>RotatE</strong>: Sun et al. (2019) - "RotatE: Knowledge Graph Embedding by Relational Rotation in Complex Space"</li>
+                                    <li><strong>R-GCN<sup class="footnote-ref">4</sup></strong>: Schlichtkrull et al. (2018) - "Modeling Relational Data with Graph Convolutional Networks"</li>
+                                    <li><strong>PyKEEN</strong>: Ali et al. (2021) - "PyKEEN: A Python Library for Training and Evaluating Knowledge Graph Embeddings"</li>
+                                    <li><strong>DGL-KE</strong>: Zheng et al. (2020) - "DGL-KE: Training Knowledge Graph Embeddings at Scale"</li>
+                                    <li><strong>TransE/ComplEx</strong>: Bordes et al. (2013), Trouillon et al. (2016) - 기초 KGE<sup class="footnote-ref">5</sup> 모델</li>
+                                </ul>
+                            </div>
+
+                            <!-- Footnotes -->
+                            <div class="mt-4 pt-4 border-t themeable-border">
+                                <div class="space-y-1">
+                                    <p class="text-xs themeable-subtitle"><sup>2</sup> KG = Knowledge Graph (지식 그래프)</p>
+                                    <p class="text-xs themeable-subtitle"><sup>3</sup> BERT = Bidirectional Encoder Representations from Transformers (트랜스포머 기반 양방향 인코더 표현)</p>
+                                    <p class="text-xs themeable-subtitle"><sup>4</sup> R-GCN = Relational Graph Convolutional Network (관계형 그래프 합성곱 신경망)</p>
+                                    <p class="text-xs themeable-subtitle"><sup>5</sup> KGE = Knowledge Graph Embedding (지식 그래프 임베딩)</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div id="content-3" class="content-panel">
                         <h3 class="text-2xl font-bold mb-4 text-center themeable-heading">임베딩 기반 지식 그래프 구축 (Embedding-based KG Construction)</h3>
                         <p class="themeable-subtitle mb-6 text-center">대규모 텍스트로부터 학습한 임베딩을 활용하여 지식 그래프를 자동으로 생성하거나 확장하는 방식입니다.</p>
                         <div class="themeable-card p-6 rounded-lg shadow-md border">
-                            <div class="flex flex-col md:flex-row items-center justify-center">
-                                <div class="diagram-box w-40">대규모 텍스트 Corpus</div>
-                                <div class="diagram-arrow transform md:rotate-0 rotate-90 my-2 md:my-0">→</div>
-                                <div class="diagram-box">임베딩 모델</div>
-                                <div class="diagram-arrow transform md:rotate-0 rotate-90 my-2 md:my-0">→</div>
-                                <div class="flex flex-col items-center">
-                                    <div class="diagram-box w-48">개체/관계 추출</div>
-                                    <div class="diagram-arrow text-2xl transform rotate-90">↓</div>
-                                    <div class="diagram-box diagram-box-accent w-48">지식 그래프</div>
+                            <!-- New Improved Diagram -->
+                            <div class="flex flex-col items-center space-y-4">
+                                <!-- Step 1: Input -->
+                                <div class="diagram-box w-56">대규모 텍스트 Corpus</div>
+                                <div class="diagram-arrow text-2xl">↓</div>
+
+                                <!-- Step 2: Parallel Processing -->
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-2xl">
+                                    <div class="flex flex-col items-center">
+                                        <div class="diagram-box text-sm h-20 flex items-center justify-center">NER<sup class="footnote-ref">7</sup><br/>(개체명 인식)</div>
+                                        <p class="text-xs mt-2 themeable-subtitle text-center">예: "서울", "OpenAI"</p>
+                                    </div>
+                                    <div class="flex flex-col items-center">
+                                        <div class="diagram-box text-sm h-20 flex items-center justify-center">임베딩 모델<br/>(문맥 벡터 생성)</div>
+                                        <p class="text-xs mt-2 themeable-subtitle text-center">의미적 유사도 계산</p>
+                                    </div>
+                                </div>
+
+                                <div class="diagram-arrow text-2xl">↓</div>
+
+                                <!-- Step 3: Entity Linking -->
+                                <div class="diagram-box w-64">
+                                    <div class="text-center">임베딩 기반 개체 연결 (EL<sup class="footnote-ref">6</sup>)</div>
+                                    <div class="text-xs mt-1">"서울" → KB의 [Seoul, South Korea]</div>
+                                </div>
+
+                                <div class="diagram-arrow text-2xl">↓</div>
+
+                                <!-- Step 4: Relation Extraction -->
+                                <div class="diagram-box w-64">
+                                    <div class="text-center">관계 추출 (임베딩 유사도)</div>
+                                    <div class="text-xs mt-1">문맥 패턴에서 관계 유형 식별</div>
+                                </div>
+
+                                <div class="diagram-arrow text-2xl">↓</div>
+
+                                <!-- Step 5: Triple Generation -->
+                                <div class="diagram-box w-64">
+                                    <div class="text-center">SPO<sup class="footnote-ref">8</sup> 트리플 생성</div>
+                                    <div class="text-xs mt-1">(주어, 관계, 목적어) 구조</div>
+                                </div>
+
+                                <div class="diagram-arrow text-2xl">↓</div>
+
+                                <!-- Step 6: Knowledge Graph -->
+                                <div class="diagram-box diagram-box-accent w-64">
+                                    <div class="text-center font-bold">지식 그래프</div>
+                                    <div class="text-xs mt-1">[서울] --(수도)--> [대한민국]</div>
                                 </div>
                             </div>
+
                             <div class="mt-6">
                                 <h4 class="font-bold themeable-heading mb-2">주요 특징</h4>
-                                <p class="themeable-subtitle">수작업에 의존했던 지식 그래프 구축 과정을 자동화하여 비용과 시간을 크게 절감할 수 있습니다. 임베딩의 통계적 패턴 분석을 통해 기존에 발견하지 못했던 새로운 관계를 발굴할 수 있습니다.</p>
+                                <p class="themeable-subtitle">수작업에 의존했던 지식 그래프 구축 과정을 자동화하여 비용과 시간을 크게 절감할 수 있습니다. 임베딩의 통계적 패턴 분석을 통해 기존에 발견하지 못했던 새로운 관계를 발굴할 수 있습니다. 특히 임베딩 유사도를 활용하여 텍스트에서 추출한 개체를 지식 베이스의 정확한 개체와 연결하고, 문맥 패턴에서 의미적 관계를 추론할 수 있습니다.</p>
+                            </div>
+
+                            <!-- Key References -->
+                            <div class="mt-6 p-4 rounded" style="background-color: rgba(13, 148, 136, 0.05); border-left: 3px solid var(--teal-color);">
+                                <h4 class="font-bold themeable-heading mb-3 text-sm">📚 주요 참고문헌</h4>
+                                <ul class="space-y-2 text-xs themeable-subtitle">
+                                    <li><strong>BLINK</strong>: Wu et al. (2020) - "BLINK: Scalable and Accurate Entity Linking"</li>
+                                    <li><strong>REL</strong>: van Hulst et al. (2020) - "REL: An Entity Linker Standing on the Shoulders of Giants"</li>
+                                    <li><strong>Bootleg</strong>: Orr et al. (2021) - "Bootleg: Chasing the Tail with Self-Supervised Named Entity Disambiguation"</li>
+                                    <li><strong>GENRE</strong>: De Cao et al. (2021) - "Autoregressive Entity Retrieval"</li>
+                                    <li><strong>GraphRAG</strong>: Edge et al. (2024) - "From Local to Global: A Graph RAG Approach" (Microsoft Research)</li>
+                                </ul>
+                            </div>
+
+                            <!-- Footnotes -->
+                            <div class="mt-4 pt-4 border-t themeable-border">
+                                <div class="space-y-1">
+                                    <p class="text-xs themeable-subtitle"><sup>6</sup> EL<sup class="footnote-ref">6</sup> = Entity Linking (개체 연결: 텍스트에서 개체를 식별하고 지식베이스와 연결)</p>
+                                    <p class="text-xs themeable-subtitle"><sup>7</sup> NER<sup class="footnote-ref">7</sup> = Named Entity Recognition (개체명 인식)</p>
+                                    <p class="text-xs themeable-subtitle"><sup>8</sup> SPO<sup class="footnote-ref">8</sup> = Subject-Predicate-Object (주어-술어-목적어 트리플 구조)</p>
+                                </div>
                             </div>
                         </div>
                     </div>
