--- a/index.html
+++ b/index.html
@@ -654,50 +654,57 @@
                     container.appendChild(placeholder);
                 }
 
-                // Add "더 보기" button if there are more articles
-                if (currentDisplayCount < articles.length) {
-                    const loadMoreBtn = document.createElement('div');
-                    loadMoreBtn.className = 'col-span-full flex justify-center mt-8';
-                    const remaining = articles.length - currentDisplayCount;
-                    loadMoreBtn.innerHTML = `
-                        <button id="loadmore-${category}" class="px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white font-semibold rounded-md transition-colors">
-                            더 보기 (${remaining}개 남음)
-                        </button>
-                    `;
-                    container.appendChild(loadMoreBtn);
+                // Add navigation buttons (더 보기 / 적게 보기) in the same row
+                const hasMore = currentDisplayCount < articles.length;
+                const hasLess = currentDisplayCount > initialLimit;
 
-                    // Load more functionality
-                    document.getElementById(`loadmore-${category}`).addEventListener('click', function() {
-                        previousDisplayCount = currentDisplayCount;
-                        const columnsPerRow = getColumnsPerRow();
-                        const increment = columnsPerRow * 2; // Add 2 rows at a time
-                        currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
-                        updateDisplay(true);
-                    });
-                }
+                if (hasMore || hasLess) {
+                    const navWrapper = document.createElement('div');
+                    navWrapper.className = 'col-span-full flex justify-center gap-4 mt-8';
 
-                // Add "적게 보기" button if showing more than initial limit
-                if (currentDisplayCount > initialLimit) {
-                    const showLessBtn = document.createElement('div');
-                    showLessBtn.className = 'col-span-full flex justify-center mt-4';
-                    showLessBtn.innerHTML = `
-                        <button id="showless-${category}" class="px-8 py-3 bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 font-semibold rounded-md transition-colors">
-                            적게 보기
-                        </button>
-                    `;
-                    container.appendChild(showLessBtn);
+                    // Add "적게 보기" button (left side)
+                    if (hasLess) {
+                        const showLessBtn = document.createElement('button');
+                        showLessBtn.id = `showless-${category}`;
+                        showLessBtn.className = 'px-8 py-3 bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 font-semibold rounded-md transition-colors';
+                        showLessBtn.textContent = '적게 보기';
 
-                    // Show less functionality
-                    document.getElementById(`showless-${category}`).addEventListener('click', function() {
-                        previousDisplayCount = currentDisplayCount;
-                        const columnsPerRow = getColumnsPerRow();
-                        const decrement = columnsPerRow * 2; // Remove 2 rows at a time
-                        currentDisplayCount = Math.max(currentDisplayCount - decrement, initialLimit);
-                        updateDisplay(false);
+                        showLessBtn.addEventListener('click', function(e) {
+                            e.preventDefault();
+                            e.stopPropagation();
+                            previousDisplayCount = currentDisplayCount;
+                            const columnsPerRow = getColumnsPerRow();
+                            const decrement = columnsPerRow * 2;
+                            currentDisplayCount = Math.max(currentDisplayCount - decrement, initialLimit);
+                            updateDisplay(false);
+                            container.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                        });
 
-                        // Scroll to section top smoothly
-                        container.scrollIntoView({ behavior: 'smooth', block: 'start' });
-                    });
+                        navWrapper.appendChild(showLessBtn);
+                    }
+
+                    // Add "더 보기" button (right side)
+                    if (hasMore) {
+                        const loadMoreBtn = document.createElement('button');
+                        loadMoreBtn.id = `loadmore-${category}`;
+                        loadMoreBtn.className = 'px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white font-semibold rounded-md transition-colors';
+                        const remaining = articles.length - currentDisplayCount;
+                        loadMoreBtn.textContent = `더 보기 (${remaining}개 남음)`;
+
+                        loadMoreBtn.addEventListener('click', function(e) {
+                            e.preventDefault();
+                            e.stopPropagation();
+                            previousDisplayCount = currentDisplayCount;
+                            const columnsPerRow = getColumnsPerRow();
+                            const increment = columnsPerRow * 2;
+                            currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
+                            updateDisplay(true);
+                        });
+
+                        navWrapper.appendChild(loadMoreBtn);
+                    }
+
+                    container.appendChild(navWrapper);
                 }
 
                 previousDisplayCount = currentDisplayCount;
@@ -724,23 +731,27 @@
 
             // Add initial buttons
             if (articles.length > initialLimit) {
-                const loadMoreBtn = document.createElement('div');
-                loadMoreBtn.className = 'col-span-full flex justify-center mt-8';
-                const remaining = articles.length - initialLimit;
-                loadMoreBtn.innerHTML = `
-                    <button id="loadmore-${category}" class="px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white font-semibold rounded-md transition-colors">
-                        더 보기 (${remaining}개 남음)
-                    </button>
-                `;
-                container.appendChild(loadMoreBtn);
+                const loadMoreWrapper = document.createElement('div');
+                loadMoreWrapper.className = 'col-span-full flex justify-center mt-8';
 
-                document.getElementById(`loadmore-${category}`).addEventListener('click', function() {
+                const loadMoreBtn = document.createElement('button');
+                loadMoreBtn.id = `loadmore-${category}`;
+                loadMoreBtn.className = 'px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white font-semibold rounded-md transition-colors';
+                const remaining = articles.length - initialLimit;
+                loadMoreBtn.textContent = `더 보기 (${remaining}개 남음)`;
+
+                loadMoreBtn.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    e.stopPropagation();
                     previousDisplayCount = currentDisplayCount;
                     const columnsPerRow = getColumnsPerRow();
                     const increment = columnsPerRow * 2; // Add 2 rows at a time
                     currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
                     updateDisplay(true);
                 });
+
+                loadMoreWrapper.appendChild(loadMoreBtn);
+                container.appendChild(loadMoreWrapper);
             }
         }
 
