--- a/index.html
+++ b/index.html
@@ -660,14 +660,15 @@
 
                 if (hasMore || hasLess) {
                     const navWrapper = document.createElement('div');
-                    navWrapper.className = 'col-span-full flex justify-center gap-4 mt-8';
+                    navWrapper.className = 'col-span-full flex flex-nowrap justify-center items-center gap-3 mt-8';
 
                     // Add "적게 보기" button (left side)
                     if (hasLess) {
                         const showLessBtn = document.createElement('button');
                         showLessBtn.id = `showless-${category}`;
-                        showLessBtn.className = 'px-8 py-3 bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 font-semibold rounded-md transition-colors';
+                        showLessBtn.className = 'px-4 sm:px-8 py-3 bg-slate-700/50 hover:bg-slate-600/50 active:bg-slate-600 text-slate-300 text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
                         showLessBtn.textContent = '적게 보기';
+                        showLessBtn.setAttribute('type', 'button');
 
                         showLessBtn.addEventListener('click', function(e) {
                             e.preventDefault();
@@ -678,7 +679,7 @@
                             currentDisplayCount = Math.max(currentDisplayCount - decrement, initialLimit);
                             updateDisplay(false);
                             container.scrollIntoView({ behavior: 'smooth', block: 'start' });
-                        });
+                        }, { passive: false });
 
                         navWrapper.appendChild(showLessBtn);
                     }
@@ -687,9 +688,10 @@
                     if (hasMore) {
                         const loadMoreBtn = document.createElement('button');
                         loadMoreBtn.id = `loadmore-${category}`;
-                        loadMoreBtn.className = 'px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white font-semibold rounded-md transition-colors';
+                        loadMoreBtn.className = 'px-4 sm:px-8 py-3 bg-slate-800 hover:bg-slate-700 active:bg-slate-700 text-white text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
                         const remaining = articles.length - currentDisplayCount;
-                        loadMoreBtn.textContent = `더 보기 (${remaining}개 남음)`;
+                        loadMoreBtn.textContent = `더 보기 (${remaining})`;
+                        loadMoreBtn.setAttribute('type', 'button');
 
                         loadMoreBtn.addEventListener('click', function(e) {
                             e.preventDefault();
@@ -699,7 +701,7 @@
                             const increment = columnsPerRow * 2;
                             currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
                             updateDisplay(true);
-                        });
+                        }, { passive: false });
 
                         navWrapper.appendChild(loadMoreBtn);
                     }
@@ -732,13 +734,14 @@
             // Add initial buttons
             if (articles.length > initialLimit) {
                 const loadMoreWrapper = document.createElement('div');
-                loadMoreWrapper.className = 'col-span-full flex justify-center mt-8';
+                loadMoreWrapper.className = 'col-span-full flex flex-nowrap justify-center items-center mt-8';
 
                 const loadMoreBtn = document.createElement('button');
                 loadMoreBtn.id = `loadmore-${category}`;
-                loadMoreBtn.className = 'px-8 py-3 bg-slate-800 hover:bg-slate-700 text-white font-semibold rounded-md transition-colors';
+                loadMoreBtn.className = 'px-4 sm:px-8 py-3 bg-slate-800 hover:bg-slate-700 active:bg-slate-700 text-white text-sm sm:text-base font-semibold rounded-md transition-colors whitespace-nowrap';
                 const remaining = articles.length - initialLimit;
-                loadMoreBtn.textContent = `더 보기 (${remaining}개 남음)`;
+                loadMoreBtn.textContent = `더 보기 (${remaining})`;
+                loadMoreBtn.setAttribute('type', 'button');
 
                 loadMoreBtn.addEventListener('click', function(e) {
                     e.preventDefault();
@@ -748,7 +751,7 @@
                     const increment = columnsPerRow * 2; // Add 2 rows at a time
                     currentDisplayCount = Math.min(currentDisplayCount + increment, articles.length);
                     updateDisplay(true);
-                });
+                }, { passive: false });
 
                 loadMoreWrapper.appendChild(loadMoreBtn);
                 container.appendChild(loadMoreWrapper);
