--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
                     </svg>
                 </button>
-                <a href="https://www.pebblous.ai/en/contact" target="_blank" rel="noopener noreferrer" class="bg-slate-800 hover:bg-slate-700 px-4 py-2 rounded-md transition-colors">Contact</a>
+                <a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="bg-slate-800 hover:bg-slate-700 px-4 py-2 rounded-md transition-colors">Contact</a>
             </nav>
             <div class="flex items-center space-x-3 md:hidden">
                 <button id="stats-icon-btn-mobile" class="stats-icon-btn text-white" aria-label="블로그 통계 보기" title="블로그 통계">
@@ -184,7 +184,7 @@
                 <a href="#art" class="block text-slate-300 hover:text-white transition-colors">Data Art</a>
                 <a href="#tech" class="block text-slate-300 hover:text-white transition-colors">Tech Insights</a>
                 <a href="#story" class="block text-slate-300 hover:text-white transition-colors">Data Stories</a>
-                <a href="https://www.pebblous.ai/en/contact" target="_blank" rel="noopener noreferrer" class="block text-slate-300 hover:text-white transition-colors">Contact</a>
+                <a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="block text-slate-300 hover:text-white transition-colors">Contact</a>
             </div>
         </nav>
     </header>
@@ -936,10 +936,19 @@
                 // Update category titles with metadata from articles.json
                 updateCategoryTitles();
 
-                // Filter and group articles by category
-                const artArticles = allArticles.filter(a => a.category === 'art');
-                const techArticles = allArticles.filter(a => a.category === 'tech');
-                const storyArticles = allArticles.filter(a => a.category === 'story');
+                // Sort function: featured first, then by date (newest first)
+                const sortArticles = (articles) => {
+                    return articles.sort((a, b) => {
+                        if (a.featured && !b.featured) return -1;
+                        if (!a.featured && b.featured) return 1;
+                        return new Date(b.date) - new Date(a.date);
+                    });
+                };
+
+                // Filter and group articles by category, then sort
+                const artArticles = sortArticles(allArticles.filter(a => a.category === 'art'));
+                const techArticles = sortArticles(allArticles.filter(a => a.category === 'tech'));
+                const storyArticles = sortArticles(allArticles.filter(a => a.category === 'story'));
 
                 // Render articles
                 renderArticles('art-articles', artArticles);
