--- a/index.html
+++ b/index.html
@@ -585,19 +585,20 @@
                                 </div>
                                 ${tagsScrollHtml}
                                 <h3 class="text-2xl font-bold text-white mb-3">${article.title}</h3>
-                                <p class="text-sm text-slate-400 mb-4">${article.description}</p>
-                                <div class="grid grid-cols-2 gap-2">
-                                    <button onclick="openModal('${article.modalId}')" class="icon-button icon-button-modal">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="color: white;">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 3.75H6A2.25 2.25 0 0 0 3.75 6v1.5M16.5 3.75H18A2.25 2.25 0 0 1 20.25 6v1.5m0 9V18A2.25 2.25 0 0 1 18 20.25h-1.5m-9 0H6A2.25 2.25 0 0 1 3.75 18v-1.5M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                <p class="text-sm text-slate-400">${article.description}</p>
+                            </div>
+                            <div class="pl-6 pr-3 pb-0 flex justify-end">
+                                <div class="icon-panel">
+                                    <button onclick="openModal('${article.modalId}')" class="icon-button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                         </svg>
-                                        <span class="icon-button-text">모달</span>
                                     </button>
-                                    <a href="${article.path}" class="icon-button icon-button-page">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="color: white;">
+                                    <a href="${article.path}" target="_blank" rel="noopener noreferrer" class="icon-button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
                                         </svg>
-                                        <span class="icon-button-text">페이지</span>
                                     </a>
                                 </div>
                             </div>
