DAL new work update

--- a/index.html
+++ b/index.html
@@ -382,6 +382,14 @@
                 maxWidth: 'max-w-6xl',
                 height: 'h-[95vh]',
                 layout: 'fullscreen'
+            },
+            pendulum02Modal: {
+                id: 'pendulum02Modal',
+                title: 'Pendulum, Particles and Pebbles',
+                iframeSrc: 'project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-02.html',
+                maxWidth: 'max-w-6xl',
+                height: 'h-[95vh]',
+                layout: 'fullscreen'
             }
         };
 
