--- a/index.html
+++ b/index.html
@@ -390,6 +390,14 @@
                 maxWidth: 'max-w-6xl',
                 height: 'h-[95vh]',
                 layout: 'fullscreen'
+            },
+            pendulum03Modal: {
+                id: 'pendulum03Modal',
+                title: 'Pendulum, Particles and Pebbles',
+                iframeSrc: 'project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-03.html',
+                maxWidth: 'max-w-6xl',
+                height: 'h-[95vh]',
+                layout: 'fullscreen'
             }
         };
 
@@ -530,6 +538,12 @@
                     ? `<span class="featured-badge">FEATURED</span>`
                     : '';
 
+                // Check if animated media is video format
+                const isAnimatedVideo = article.imageAnimated && (
+                    article.imageAnimated.toLowerCase().endsWith('.mp4') ||
+                    article.imageAnimated.toLowerCase().endsWith('.m4v')
+                );
+
                 const imageTag = displayImage
                     ? isPebblousLogo
                         ? `<div class="relative w-full h-48 overflow-hidden bg-slate-800 flex items-end justify-end p-4">
@@ -540,12 +554,23 @@
                                  data-orange-logo="https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png"
                                  loading="lazy">
                            </div>`
-                        : `<div class="relative w-full h-48 overflow-hidden bg-slate-900 group/img">
-                            <img src="${displayImage}" alt="${article.title}"
-                                 class="w-full h-48 object-cover rounded-md"
-                                 ${article.imageAnimated ? `data-static="${displayImage}" data-animated="${article.imageAnimated}"` : ''}
-                                 loading="lazy">
-                           </div>`
+                        : isAnimatedVideo
+                            ? `<div class="relative w-full h-48 overflow-hidden bg-slate-900 group/img">
+                                <video class="w-full h-48 object-cover rounded-md"
+                                       data-animated
+                                       muted
+                                       loop
+                                       playsinline
+                                       preload="metadata">
+                                    <source src="${article.imageAnimated}" type="${article.imageAnimated.toLowerCase().endsWith('.m4v') ? 'video/x-m4v' : 'video/mp4'}">
+                                </video>
+                               </div>`
+                            : `<div class="relative w-full h-48 overflow-hidden bg-slate-900 group/img">
+                                <img src="${displayImage}" alt="${article.title}"
+                                     class="w-full h-48 object-cover rounded-md"
+                                     ${article.imageAnimated ? `data-static="${displayImage}" data-animated="${article.imageAnimated}"` : ''}
+                                     loading="lazy">
+                               </div>`
                     : `<div class="relative w-full h-48 overflow-hidden bg-slate-800 flex items-end justify-end p-4">
                         <img src="https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png" alt="Pebblous Logo"
                              class="default-logo"
@@ -851,6 +876,38 @@
                             }, 300);
                         });
                     }
+                }
+
+                // Video hover functionality (for MP4 animated thumbnails)
+                const video = card.querySelector('video[data-animated]');
+
+                if (video) {
+                    // Desktop mouse events - play/pause video
+                    card.addEventListener('mouseenter', function onMouseEnter() {
+                        video.play().catch(err => {
+                            // Silently handle autoplay restrictions
+                            console.log('Video autoplay prevented:', err);
+                        });
+                    });
+
+                    card.addEventListener('mouseleave', function onMouseLeave() {
+                        video.pause();
+                        video.currentTime = 0; // Reset to beginning
+                    });
+
+                    // Mobile touch events - play/pause video
+                    card.addEventListener('touchstart', function onTouchStart(e) {
+                        card.classList.add('touch-active');
+                        video.play().catch(err => {
+                            console.log('Video autoplay prevented:', err);
+                        });
+                    }, { passive: true });
+
+                    card.addEventListener('touchend', function onTouchEnd() {
+                        card.classList.remove('touch-active');
+                        video.pause();
+                        video.currentTime = 0;
+                    }, { passive: true });
                 }
 
                 // Image hover swap functionality (Immediate GIF swap for animated images)
