--- a/project/IR/PBLS-IR-Physical-AI-01.html
+++ b/project/IR/PBLS-IR-Physical-AI-01.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="description" content="페블러스 투자 유치 제안서 - Physical AI 시대를 위한 데이터 그린하우스 전략 (CONFIDENTIAL)">
     <meta property="og:title" content="페블러스 투자 유치 제안서 | Physical AI 데이터 그린하우스">
-    <meta property="og:description" content="Physical AI 시대를 위한 데이터 그린하우스 전략 - Pebblous Investment Proposal (CONFIDENTIAL)">
+    <meta property="og:description" content="Non-IT 기간산업을 위한 AI-Ready 데이터 생성 플랫폼. 현대차 레퍼런스 기반 Mobility-First GTM 전략으로 Physical AI 시장 선점 | 20억원 투자 유치 제안 (CONFIDENTIAL)">
     <meta property="og:type" content="article">
     <title id="page-title">페블러스 투자 유치 제안서 | Physical AI 데이터 그린하우스 전략</title>
 
@@ -211,6 +211,19 @@
         .comparison-row:hover {
             background-color: rgba(248, 104, 37, 0.05);
         }
+
+        /* Keyboard Focus Styles */
+        a:focus-visible,
+        button:focus-visible {
+            outline: 3px solid #F86825;
+            outline-offset: 2px;
+        }
+
+        /* Gradient Subtitle Bold Fix */
+        #page-subtitle {
+            font-weight: 900 !important;
+            -webkit-text-stroke: 0.5px rgba(248, 104, 37, 0.3);
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -282,18 +295,29 @@
 
                 <!-- Hero Section -->
                 <header class="text-center mb-16">
-                    <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold themeable-heading mb-6 leading-tight" style="line-height: 1.4;">
-                        <span class="block themeable-heading">페블러스 투자 유치 제안서</span>
-                        <span class="block mt-2 themeable-heading">Physical AI 시대를 위한 데이터 그린하우스 전략</span>
+                    <!-- Document Label -->
+                    <div class="mb-6">
+                        <span class="inline-block px-4 py-2 text-sm font-semibold themeable-text-muted border-2 themeable-border rounded-full uppercase tracking-wider">
+                            페블러스 투자 유치 제안서
+                        </span>
+                    </div>
+
+                    <!-- Main Title -->
+                    <h1 id="page-h1-title" class="text-3xl md:text-5xl themeable-heading mb-4 leading-tight" style="font-weight: 900 !important; font-family: 'Noto Sans KR', sans-serif; word-break: keep-all;">
+                        Physical AI 시대를 위한 데이터 그린하우스 전략
                     </h1>
-                    <p class="text-xl themeable-subtitle mb-4">Green Data로 Physical AI 시장을 선점한다</p>
+
+                    <!-- Subtitle (custom styled, not managed by PebblousPage) -->
+                    <p class="text-2xl md:text-3xl mb-8" style="color: #F86825; font-weight: 900 !important; font-family: 'Noto Sans KR', sans-serif; word-break: keep-all;">
+                        "Green Data로 Physical AI 시장을 선점한다"
+                    </p>
 
                     <!-- Document Info -->
                     <div class="flex flex-wrap justify-center items-center gap-2 text-sm themeable-text-muted mb-8">
                         <span id="publish-date">작성일: 2025년 10월 23일</span>
-                        <span class="text-slate-600">|</span>
+                        <span class="themeable-text-muted">|</span>
                         <span id="publisher">(주)페블러스</span>
-                        <span class="text-slate-600">|</span>
+                        <span class="themeable-text-muted">|</span>
                         <span class="text-red-400 font-semibold">CONFIDENTIAL</span>
                     </div>
                 </header>
@@ -313,6 +337,10 @@
                         <div class="space-y-6 themeable-text leading-relaxed">
                             <p>
                                 AI 기술이 범용화되며 시장은 명확히 양분되고 있습니다. IT 기업이 자체 개발하는 <strong>'범용 AI'</strong> 시장은 레드오션이 되었지만, AI를 자체 구축할 수 없으나 도입 수요가 폭발적인 <strong class="accent-text">'Non-IT 기간산업'</strong>이라는 거대한 블루오션이 열리고 있습니다.
+                            </p>
+
+                            <p>
+                                <strong class="accent-text">Physical AI</strong>(로보틱스, 자율주행, 스마트팩토리, 조선, 국방)의 성공은 모델이 아닌 <strong>데이터</strong>에 달려있습니다.
                             </p>
 
                             <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
@@ -337,7 +365,7 @@
 
                 <!-- Section 1: Why Now? -->
                 <section id="why-now" class="mb-16 fade-in-card">
-                    <h2 class="text-3xl font-bold themeable-heading mb-8">1. The "Why Now?": Physical AI 패러다임</h2>
+                    <h2 class="text-3xl font-bold themeable-heading mb-8">1. Physical AI 패러다임: 왜 지금인가?</h2>
 
                     <div class="themeable-card rounded-xl p-8 mb-6 interactive-card">
                         <h3 class="text-2xl font-bold themeable-heading mb-4 flex items-center gap-2">
@@ -346,10 +374,21 @@
                         </h3>
                         <div class="space-y-4 themeable-text leading-relaxed">
                             <p>
-                                GenAI와 LLM의 발전은 AI 기술의 <strong>'상향 평준화'</strong>를 가져왔습니다. IT 역량이 높은 기업은 AI 솔루션을 구매하지 않고 자체 개발합니다.
+                                GenAI와 LLM의 발전은 AI 기술의 <strong>'상향 평준화'</strong>를 가져왔습니다. IT 역량이 높은 기업은 AI 솔루션을 구매하지 않고 자체 개발합니다. 이는 '범용 AI 솔루션' 시장의 종말이자, AI를 자체 구축할 수 없지만 도입이 절실한 <strong class="accent-text">'Non-IT' 기간산업 (제조, 조선, 국방)</strong> 이라는 거대한 블루오션의 개막입니다.
                             </p>
-                            <p>
-                                이는 '범용 AI 솔루션' 시장의 종말이자, AI를 자체 구축할 수 없지만 도입이 절실한 <strong class="accent-text">'Non-IT' 기간산업 (제조, 조선, 국방)</strong> 이라는 거대한 블루오션의 개막입니다.
+
+                            <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
+                                <p class="font-semibold mb-3">Physical AI의 시장 기회</p>
+                                <ul class="space-y-2 ml-4">
+                                    <li><strong class="accent-text">로보틱스:</strong> 범용 로보틱스의 ChatGPT 모멘트 도래</li>
+                                    <li><strong class="accent-text">자율주행:</strong> 물리적 세계를 이해하는 AI 시스템</li>
+                                    <li><strong class="accent-text">제조/조선/국방:</strong> AI 자체 구축 불가능한 기간산업</li>
+                                </ul>
+                            </div>
+
+                            <p class="text-sm themeable-text-muted" style="border-left: 3px solid #F86825; padding-left: 12px;">
+                                "Physical AI는 지각하고, 추론하고, 계획하고, 행동할 수 있는 AI입니다. 범용 로보틱스의 ChatGPT 모멘트가 곧 도래할 것입니다."<br>
+                                <span class="text-xs">— Jensen Huang, NVIDIA CEO, CES 2025 [6]</span>
                             </p>
                         </div>
                     </div>
@@ -361,10 +400,20 @@
                         </h3>
                         <div class="space-y-4 themeable-text leading-relaxed">
                             <p>
-                                대한민국 정부는 <strong class="accent-text">'Physical AI'</strong>를 국가 AI 전략의 핵심으로 지정했습니다. 로보틱스, 자율주행, 스마트팩토리는 국가 제조업 경쟁력과 직결됩니다.
+                                대한민국 정부는 <strong class="accent-text">'Physical AI 1등 국가 도약'</strong>을 국가 AI 대전환을 위한 15대 선도 프로젝트의 핵심 목표로 명시했습니다.<sup class="text-orange-500">[1]</sup>
                             </p>
-                            <p class="text-sm themeable-text-muted">
-                                관련 예산과 정책적 지원이 집중되며 시장의 폭발적 성장이 예상됩니다.
+
+                            <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
+                                <p class="font-semibold mb-3">정부 15대 선도 프로젝트 주요 목표</p>
+                                <ul class="space-y-2 ml-4">
+                                    <li><strong class="accent-text">휴머노이드 산업:</strong> 3대 강국 진입 ('30)</li>
+                                    <li><strong class="accent-text">자율주행차:</strong> 상용화 ('27)</li>
+                                    <li><strong class="accent-text">데이터 시장:</strong> 50조원 규모 달성 ('30)</li>
+                                </ul>
+                            </div>
+
+                            <p>
+                                로보틱스, 자율주행, 스마트팩토리는 국가 제조업 경쟁력과 직결되며, 관련 예산과 정책적 지원이 집중되어 시장의 폭발적 성장이 예상됩니다.
                             </p>
                         </div>
                     </div>
@@ -372,12 +421,22 @@
                     <div class="themeable-card rounded-xl p-8 interactive-card">
                         <h3 class="text-2xl font-bold themeable-heading mb-4 flex items-center gap-2">
                             <span class="accent-text">📊</span>
-                            Model-Centric → Data-Centric 전환
+                            모델 중심에서 데이터 중심으로의 전환
                         </h3>
                         <div class="space-y-4 themeable-text leading-relaxed">
                             <p>
-                                파운데이션 모델의 보편화로 <strong class="accent-text">'데이터의 품질과 확보'</strong>가 기업의 핵심 경쟁력이 되었습니다.
+                                파운데이션 모델의 보편화로 AI 개발 패러다임이 전환되고 있습니다. <strong class="accent-text">'데이터의 품질과 확보'</strong>가 기업의 핵심 경쟁력이 되었습니다.<sup class="text-orange-500">[2]</sup>
                             </p>
+
+                            <div class="bg-opacity-10 rounded-lg p-6 border-l-4 border-l-orange-500" style="background-color: rgba(248, 104, 37, 0.1);">
+                                <p class="font-semibold mb-3">Data-Centric AI의 핵심 요소</p>
+                                <ul class="space-y-2 ml-4">
+                                    <li><strong class="accent-text">데이터 품질:</strong> 정확성, 일관성, 완전성 확보</li>
+                                    <li><strong class="accent-text">데이터 라벨링:</strong> 고품질 주석 및 메타데이터</li>
+                                    <li><strong class="accent-text">데이터 다양성:</strong> Edge Case 및 Long-tail 시나리오 커버</li>
+                                </ul>
+                            </div>
+
                             <p>
                                 특히 Physical AI는 물리적 세계 기반 데이터로, 일반 웹 스크래핑으로 확보 불가능합니다. <strong>데이터의 가치가 극대화되는 영역</strong>입니다.
                             </p>
@@ -572,7 +631,7 @@
                             <div>
                                 <h3 class="text-2xl font-bold themeable-heading mb-4">자금 배분</h3>
                                 <div class="chart-container" style="height: 250px;">
-                                    <canvas id="fundAllocationChart"></canvas>
+                                    <canvas id="fundAllocationChart" role="img" aria-label="투자금 사용 계획 차트: On-Prem 제품화 40%, GTM 실행 40%, 운영 안정화 20%"></canvas>
                                 </div>
                             </div>
                         </div>
@@ -630,14 +689,15 @@
                             참고문헌
                         </h2>
                         <div class="space-y-3 text-sm themeable-text leading-relaxed">
-                            <p>[1] 과학기술정보통신부 (2025). "AI·디지털 혁신성장 전략: 로봇 및 자율시스템 분야 육성 방안."</p>
-                            <p>[2] Gartner (2024). "The Data-Centric AI Manifesto: From Model-Centric to Data-Centric."</p>
-                            <p>[3] McKinsey & Company (2025). "AI in Industry: The Next Frontier for Manufacturing and Heavy Industry."</p>
-                            <p>[4] ISO/IEC 42001:2023 (2023). "Information technology — Artificial intelligence — Management system."</p>
-                            <p>[5] Stanford Institute for Human-Centered AI (HAI) (2025). "The Rise of Physical AI and Embodied Intelligence."</p>
-                            <p>[6] Pebblous Blog (2025). "데이터 스타트업이 Physical AI에 올라타는 법: AI 범용화 시대의 생존 전략." <a href="https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html</a></p>
-                            <p>[7] Pebblous Blog (2025). "Physical AI를 위한 데이터 파이프라인: Edge-to-Core 아키텍처의 중요성." <a href="https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html</a></p>
-                            <p>[8] 페블러스(Pebblous) (2025). "페블러스 투자제안서 (v22.0)." (별첨)</p>
+                            <p>[1] 과학기술정보통신부 (2025). "AI·디지털 혁신성장 전략: 로봇 및 자율시스템 분야 육성 방안." <a href="https://www.msit.go.kr" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.msit.go.kr</a></p>
+                            <p>[2] Andrew Ng (2021). "A Chat with Andrew on MLOps: From Model-centric to Data-centric AI." DeepLearning.AI. <a href="https://www.deeplearning.ai/the-batch/issue-80/" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.deeplearning.ai/the-batch/issue-80/</a></p>
+                            <p>[3] McKinsey & Company (2024). "The State of AI in 2024: Generative AI's Breakout Year." <a href="https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai</a></p>
+                            <p>[4] ISO/IEC 42001:2023 (2023). "Information technology — Artificial intelligence — Management system." <a href="https://www.iso.org/standard/81230.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://www.iso.org/standard/81230.html</a></p>
+                            <p>[5] Stanford Institute for Human-Centered AI (2024). "Artificial Intelligence Index Report 2024." <a href="https://aiindex.stanford.edu/report/" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://aiindex.stanford.edu/report/</a></p>
+                            <p>[6] NVIDIA (2025). "CES 2025: AI Advancing at 'Incredible Pace' — Jensen Huang on Physical AI and Robotics." NVIDIA Blog. <a href="https://blogs.nvidia.com/blog/ces-2025-jensen-huang/" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blogs.nvidia.com/blog/ces-2025-jensen-huang/</a></p>
+                            <p>[7] Pebblous Blog (2025). "데이터 스타트업이 Physical AI에 올라타는 법: AI 범용화 시대의 생존 전략." <a href="https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html</a></p>
+                            <p>[8] Pebblous Blog (2025). "Physical AI를 위한 데이터 파이프라인: Edge-to-Core 아키텍처의 중요성." <a href="https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html" target="_blank" rel="noopener noreferrer" class="accent-text hover:underline">https://blog.pebblous.ai/project/PhysicalAI/data-pipeline-for-physical-ai-01.html</a></p>
+                            <p>[9] 페블러스(Pebblous) (2025). "페블러스 투자제안서 (v22.0)." (별첨)</p>
                         </div>
                     </div>
                 </section>
@@ -796,12 +856,12 @@
         // ============================================================
         async function initializePage() {
             const config = {
-                mainTitle: "페블러스 투자 유치 제안서",
-                subtitle: "Physical AI 시대를 위한 데이터 그린하우스 전략",
+                mainTitle: "Physical AI 시대를 위한 데이터 그린하우스 전략",
+                // subtitle removed - using custom HTML instead
                 publishDate: "2025년 10월 23일",
                 publisher: "(주)페블러스",
                 pageTitle: "페블러스 투자 유치 제안서 | Physical AI 데이터 그린하우스 전략",
-                defaultTheme: "dark",
+                defaultTheme: "light",
                 enableComments: false
             };
 
@@ -927,6 +987,14 @@
                 // Close menu when clicking outside
                 document.addEventListener('click', (e) => {
                     if (!mobileTocMenu.contains(e.target) && !mobileTocToggle.contains(e.target)) {
+                        mobileTocMenu.classList.remove('show');
+                        mobileTocMenu.style.transform = 'translateY(100%)';
+                    }
+                });
+
+                // Close menu with Escape key
+                document.addEventListener('keydown', (e) => {
+                    if (e.key === 'Escape' && mobileTocMenu.classList.contains('show')) {
                         mobileTocMenu.classList.remove('show');
                         mobileTocMenu.style.transform = 'translateY(100%)';
                     }
